--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ futures = "0.3.25"
 log = "0.4.17"
 redis = {version="0.22.1", features = ["aio", "async-std-comp"]}
 tokio = {version="1.22.0", features = ["net", "time", "sync", "macros", "rt-multi-thread", "io-std"]}
+mockall_double = "0.2.1"
+
+[dev-dependencies]
+mockall = "0.11.3"
+
