--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.17"
 redis = {version="0.22.1", features = ["aio", "async-std-comp"]}
 tokio = {version="1.22.0", features = ["net", "time", "sync", "macros", "rt-multi-thread", "io-std"]}
 mockall_double = "0.2.1"
+thiserror = "1.0.47"
 
 [dev-dependencies]
 mockall = "0.11.3"
